--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@usedapp/core": "^1.0.2",
+    "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "final-form": "^4.20.7",
+    "http-proxy-middleware": "^2.0.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node-sass": "4.14.1",
@@ -25,13 +29,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.1",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "sequelize": "^6.19.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3modal": "^1.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev:server": "supervisor -w server server/server.js",
+    "dev:client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
